rgbds-0.6.1/test/link/sym-noexist.out
error: sym-noexist.asm(3): Unknown symbol "nothing"
error: sym-noexist.asm(2): Unknown symbol "where"
Linking failed with 2 errors
