rgbds-0.6.1/test/link/sym-noexist.asm
SECTION "Test", ROM0
	jp where
	dw nothing
